# erodGH

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ghPlugins/erodGH/: CMakeLists.txt  readme.txt
ghPlugins/erodGH/ElasticRod/ErodData/: AssemblyInfo.cs  ErodDataGHInfo.cs
ghPlugins/erodGH/ElasticRod/ErodDataLib/: packages.config
ghPlugins/erodGH/ElasticRod/ErodModel/: AssemblyInfo.cs
ghPlugins/erodGH/ElasticRod/ErodModelLib/: packages.config
ghPlugins/erodGH/Examples/: Ex02_PeriodicRod.gh
ghPlugins/erodGH/python/: SimpleGHTest.ipynb  Test_xshell.json  elasticRodsGH.py
src/: CMakeLists.txt
src/erod/ElasticRod/ErodData/: ErodData.csproj
src/erod/ElasticRod/ErodDataLib/: ErodDataLib.csproj
src/erod/ElasticRod/ErodModelLib/: ErodModelLib.csproj
src/erod/ErodData/: ErodData.csproj
src/erod/ErodData/Data/: CableForceDataGH.cs  DeconstructEdgeGH.cs  DeconstructTopologyGH.cs  ElasticRodDataGH.cs  ITypeCSGH.cs  RodLinkageDataGH.cs  SupportWithTargetGH.cs  UnaryForceDataGH.cs
src/erod/ErodData/IO/: CableGH.cs  DropDownAttributesGH.cs  ExternalForceGH.cs  LinkageIOGH.cs  NormalGH.cs  RibbonGH.cs  RodIOGH.cs  RollingSupportGH.cs  SegmentGH.cs  SupportGH.cs  TargetSurfaceDRAFTGH.cs  TargetSurfaceGH.cs  (+3 more)
src/erod/ErodDataLib/: ErodDataLib.csproj  packages.config
src/erod/ErodModel/: ElasticRodGHInfo.cs  ErodModel.csproj
src/erod/ErodModelLib/: ErodModelLib.csproj  packages.config
src/erodGH/: erod.cc  erod.h
src/liberod/: erod.cc  erod.h
src/python/weaving/: gcmaker_gh.py  gcmaker_helper.py  optimization_diagram.py  pipeline_helper.py
(+321 files in other folders)
